RESOLVED FIXED302505
REGRESSION (302690@main): [ MacOS WK2 ] imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/evil/9_cues_overlapping_completely.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=302505
Summary REGRESSION (302690@main): [ MacOS WK2 ] imported/w3c/web-platform-tests/webv...
Jay Stfleur
Reported 2025-11-13 19:28:06 PST
Description: imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/evil/9_cues_overlapping_completely.html Is a constant crash on MacOS Wk2 after changes committed on 302690@main History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebvtt%2Frendering%2Fcues-with-video%2Fprocessing-model%2Fevil%2F9_cues_overlapping_completely.html&platform=mac&flavor=wk2 Diff/Image Diff/Crash Log: No Log and not able to reproduce issue
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-13 19:28:45 PST
EWS
Comment 2 2025-11-13 19:38:16 PST
Test gardening commit 303029@main (99e000de2f38): <https://commits.webkit.org/303029@main> Reviewed commits have been landed. Closing PR #53913 and removing active labels.
Alexey Proskuryakov
Comment 3 2025-11-14 09:21:57 PST
I found crash logs. Release: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/302700@main%20(5475)/imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/evil/9_cues_overlapping_completely-crash-log.txt Debug: https://build.webkit.org/results/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/302694@main%20(2669)/imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/evil/9_cues_overlapping_completely-crash-log.txt ASSERTION FAILED: canSafelyBeUsed() /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/WeakPtr.h(101) : T *WTF::WeakPtr<WebCore::HTMLMediaElement>::get() const [T = WebCore::HTMLMediaElement, WeakPtrImpl = WTF::DefaultWeakPtrImpl, PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>] 1 0x1484a7a34 WTF::WeakPtr<WebCore::HTMLMediaElement, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>::get() const 2 0x14a47b4b0 _ZZN7WebCore16HTMLMediaElement25updateActiveTextTrackCuesERKN3WTF9MediaTimeEENK3$_0clIS3_EEDaRT_ 3 0x14a47b3e4 WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::updateActiveTextTrackCues(WTF::MediaTime const&)::$_0, void, WTF::MediaTime const&>::call(WTF::MediaTime const&) 4 0x131a21bf0 WTF::Function<void (WTF::MediaTime const&)>::operator()(WTF::MediaTime const&) const 5 0x131a21ca8 WebKit::AudioVideoRendererRemote::MessageReceiver::taskTimeReached(WTF::MediaTime, WebKit::RemoteAudioVideoRendererState)
Jean-Yves Avenard [:jya]
Comment 4 2025-11-14 14:37:58 PST
EWS
Comment 5 2025-11-14 16:34:23 PST
Committed 303060@main (98b0e494a6b1): <https://commits.webkit.org/303060@main> Reviewed commits have been landed. Closing PR #53959 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.