REGRESSION (302690@main): [ MacOS WK2  ] imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/evil/9_cues_overlapping_completely.html is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=302505 rdar://164687403

Reviewed by Eric Carlson.

Ensure the callback is run on the main thread.

* LayoutTests/platform/mac-wk2/TestExpectations: Re-enabling test.
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::performTaskAtTime):

Canonical link: https://commits.webkit.org/303060@main